<resources>
    <string name="app_name">OlxTechathon</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="STRING_TITLE">Post your Ad</string>
    <string name="STRING_DESCRIPTION">Description</string>
    <string name="STRING_LOCATION">Location</string>
    <string name="STRING_CATEGORY">Category</string>
    <string name="STRING_PRICE">Price</string>
    <string name="STRING_PRODUCT">Product</string>
    <string name="location_prompt">Select Your Location</string>
    <string name="category_prompt">Select a Category</string>
    <string name="subcategory_prompt">Select a Product</string>

    <string-array name="locations">
        <item>Select</item>
        <item>Delhi/NCR</item>
        <item>Kolkata</item>
        <item>Patna</item>
        <item>Chennai</item>
        <item>Mumbai</item>
        <item>Hyderabad</item>
        <item>Bangalore</item>
        <item>Ahmedabad</item>
        <item>Lucknow</item>
        <item>Kanpur</item>
    </string-array>

    <string-array name="categories">
        <item>Select</item>
        <item>Mobiles</item>
        <item>Cars</item>
        <item>Electronics</item>
        <item>Furniture</item>
        <item>Kitchen</item>
        <item>Entertainment</item>
    </string-array>

    <string-array name="categories_mobile">
        <item>Select</item>
        <item>Windows</item>
        <item>IPhone</item>
        <item>Blackberry</item>
        <item>Android</item>
    </string-array>

    <string-array name="categories_cars">
        <item>Select</item>
        <item>Fiat</item>
        <item>Honda</item>
        <item>Maruti</item>
        <item>Hyundai</item>
        <item>Volkswagen</item>
        <item>Skoda</item>
    </string-array>

    <string-array name="categories_electronics">
        <item>Select</item>
        <item>Mobiles</item>
        <item>Cars</item>
        <item>Electronics</item>
        <item>Furniture</item>
        <item>Kitchen</item>
        <item>Music</item>
    </string-array>

    <string-array name="categories_furniture">
        <item>Select</item>
        <item>Air Conditioner</item>
        <item>TV</item>
        <item>Refrigerator</item>
        <item>Camera</item>
        <item>Washing Machine</item>
        <item>Music</item>
    </string-array>

    <string-array name="categories_kitchen">
        <item>Select</item>
        <item>Food Processor</item>
        <item>Food Cutter</item>
        <item>Kitchen Chimney</item>
        <item>Cylinder</item>
    </string-array>

    <string-array name="categories_entertainment">
        <item>Select</item>
        <item>DVD</item>
        <item>Music Player</item>
        <item>Cassetes</item>
        <item>Music Instruments</item>
    </string-array>

</resources>
