<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OlxHomeActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:text="@string/STRING_TITLE"
        android:textColor="#5b5b5b"
        android:textSize="25dp" />


    <Button
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Done"
        android:background="@android:color/holo_green_dark"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:clickable="false"
        android:layout_alignParentRight="true"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#0055b7"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/title"/>

    <ImageView
        android:id="@+id/upload_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:src="@drawable/icon_camera"
        android:visibility="gone"
        android:layout_below="@+id/title"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentRight="true"
        android:visibility="gone"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/title">
        <ImageView
            android:id="@+id/uploaded_image_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/placeholder" />
        <ImageView
            android:id="@+id/uploaded_image_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/placeholder" />
        <ImageView
            android:id="@+id/uploaded_image_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/placeholder" />
        <ImageView
            android:id="@+id/uploaded_image_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/placeholder" />
    </LinearLayout>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:maxLines="5"
        android:hint="Email"
        android:textColor="#5b5b5b"
        android:textSize="16dp"
        android:layout_below="@+id/upload_image"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:maxLines="5"
        android:hint="@string/STRING_DESCRIPTION"
        android:textColor="#5b5b5b"
        android:textSize="16dp"
        android:layout_below="@+id/email"/>

    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="7dp"
        android:text="@string/STRING_LOCATION"
        android:textColor="#0055b7"
        android:textSize="16dp"
        android:layout_below="@id/description"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#0055b7"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/location"/>

    <Spinner
        android:id="@+id/location_dropdown"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:entries="@array/locations"
        android:prompt="@string/location_prompt"
        android:layout_below="@+id/location"></Spinner>

    <TextView
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="7dp"
        android:text="@string/STRING_CATEGORY"
        android:textColor="#0055b7"
        android:textSize="16dp"
        android:layout_below="@id/location_dropdown"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#0055b7"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/category"/>

    <Spinner
        android:id="@+id/category_dropdown"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:entries="@array/categories"
        android:prompt="@string/category_prompt"
        android:layout_below="@+id/category"></Spinner>

    <TextView
        android:id="@+id/subcategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="7dp"
        android:text="@string/STRING_PRODUCT"
        android:textColor="#0055b7"
        android:textSize="16dp"
        android:visibility="gone"
        android:layout_below="@id/category_dropdown"/>

    <View
        android:id="@+id/subcategory_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#0055b7"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        android:layout_below="@+id/subcategory"/>

    <Spinner
        android:id="@+id/subcategory_dropdown"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:entries="@array/locations"
        android:visibility="gone"
        android:prompt="@string/subcategory_prompt"
        android:layout_below="@+id/subcategory"></Spinner>

    <EditText
        android:id="@+id/price_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/STRING_PRICE"
        android:textColor="#5b5b5b"
        android:textSize="16dp"
        android:layout_below="@+id/subcategory_dropdown"/>

</RelativeLayout>
